@@ -1,0 +1,5 @@
+Fast aggregation of large data (e.g. 100GB in RAM), fast ordered
+joins, fast add/modify/delete of columns by group using no copies at
+all, list columns, friendly and fast character-separated-value
+read/write. Offers a natural and flexible syntax, for faster
+development.
