@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 13:43:56 brook Exp $
+
+CATEGORIES=	textproc R
+
+MAINTAINER=	bacon@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/data.table/
+COMMENT=	Extension of 'data.frame'
+LICENSE=	mpl-2.0
+
+R_PKGNAME=	data.table
+R_PKGVER=	1.12.2
+
+USE_LANGUAGES=	c
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
