@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3119 2019/07/31 13:42:34 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3120 2019/07/31 13:43:55 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5076,3 +5076,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added misc/R-Hmisc version 4.2.0 [brook 2019-07-31]
 	Added sysutils/R-progress version 1.2.2 [brook 2019-07-31]
 	Added textproc/R-cellranger version 1.1.0 [brook 2019-07-31]
+	Added textproc/R-data.table version 1.12.2 [brook 2019-07-31]
